Allowed the user to go from the sign in page to the create account page, and vice versa.

--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -51,7 +51,7 @@
             }
         </script>
     </head>
-    <body onload="ShowProfile()">
+    <body style="background-color:lightblue" onload="ShowProfile()">
         <form>
             <h3 id="username"></h3>
             Name:<input type="text" id="name"><br/>
