--- a/templates/create account.ejs
+++ b/templates/create account.ejs
@@ -47,8 +47,19 @@
          signIn.send();
      }
     </script>
+    <style>
+      .other{
+        color:blue;
+      }
+      #create-account{
+        background-color:orange;
+      }
+      #sign-in{
+        background-color:lightgreen;
+      }
+    </style>
   </head>
-  <body>
+  <body style="background-color:yellow">
      <form>
         <input type="text" id="username" placeholder="Username" required><br>
         <input type="password" id="password" placeholder="Password" required> 
@@ -63,11 +74,11 @@
          document.getElementById("password").value="";
          if(window.location.pathname=="/createAccount"){
             document.body.innerHTML+=` <input type="password" id="confirmPassword" placeholder="Confirm Password" required><br/>
-        <button id="createAccount" onclick="CreateAccount()">Create Account</button>`;
+        <button id="create-account" onclick="CreateAccount()">Create Account</button><p class='other'>If you already have an account, you can <a href='/signIn'>sign in</a></p>`;
          }
          else{
           document.title="Sign In";
-          document.body.innerHTML+="<button onclick='SignIn()'>Sign In</button>";
+          document.body.innerHTML+="<button onclick='SignIn()' id='sign-in'>Sign In</button><p class='other'>If you don't have an account, you can <a href='/createAccount'>create one</a></p>";
          }
        </script>
 </html>
