--- a/templates/create account.ejs
+++ b/templates/create account.ejs
@@ -53,14 +53,20 @@
       }
       #create-account{
         background-color:orange;
+        margin-top: 5px;
       }
       #sign-in{
         background-color:lightgreen;
+          margin-top: 5px;
+      }
+      #title{
+        color:white;
       }
     </style>
   </head>
   <body style="background-color:yellow">
      <form>
+      <h2 id="title"></h2>
         <input type="text" id="username" placeholder="Username" required><br>
         <input type="password" id="password" placeholder="Password" required> 
         
@@ -72,12 +78,15 @@
          //Resets text fields
          document.getElementById("username").value="";
          document.getElementById("password").value="";
+         const title=document.getElementById("title");
          if(window.location.pathname=="/createAccount"){
+            title.textContent="Create Account";
             document.body.innerHTML+=` <input type="password" id="confirmPassword" placeholder="Confirm Password" required><br/>
-        <button id="create-account" onclick="CreateAccount()">Create Account</button><p class='other'>If you already have an account, you can <a href='/signIn'>sign in</a></p>`;
+        <button id="create-account" onclick="CreateAccount()">Create Account</button><p class="other">If you already have an account, you can <a href='/signIn'>sign in</a></p>`;
          }
          else{
           document.title="Sign In";
+          title.textContent="Sign In";
           document.body.innerHTML+="<button onclick='SignIn()' id='sign-in'>Sign In</button><p class='other'>If you don't have an account, you can <a href='/createAccount'>create one</a></p>";
          }
        </script>
