--- a/templates/create account.ejs
+++ b/templates/create account.ejs
@@ -50,6 +50,10 @@
          }
          signIn.send();
      }
+     function GoToRecipePage(){
+      if(sessionStorage.getItem("username")!==null)
+        window.location.href="/";
+     }
     </script>
     <style>
       .other{
@@ -68,7 +72,7 @@
       }
     </style>
   </head>
-  <body style="background-color:yellow">
+  <body style="background-color:yellow" onload="GoToRecipePage()">
      <form>
       <h2 id="title"></h2>
         <input type="text" id="username" placeholder="Username" required><br>
